fixed result alignment

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@ pre code {
 
 #resultcontainer {
 	display: none;
+	text-align: left;
 }
 
 .fig {
